2003-06-16  William Jon McCann  <mccann@jhu.edu>

	* gnotravex.c (main): Look for game icon in GNOME_ICONDIR
	instead of GNOME_ICONDIR"/gnotravex".  Actually, it wasn't
	finding it in the subdirectory for some reason.  This makes it
	work and we don't need a subdirectory anymore.

	* gnome-gnotravex.png: Make background transparent and use
	Vera font for numbers.
	
2003-06-15  Callum McKenzie  <callum@physics.otago.ac.nz>

	* gnotravex.c: Reverting Jon's changes until we can figure out how
	to make sure xgettext doesn't spew.

2003-06-14  William Jon McCann  <mccannwj@localhost.localdomain>

	* gnotravex.c (new_game_cb): Use multiplication symbol
	in status bar too.

2003-06-13  William Jon McCann  <mccann@jhu.edu>

	* gnotravex.c: Use UTF-8 multiplication symbol in
	settings menu.

2003-06-13  Callum McKenzie  <callum@physics.otago.ac.nz>

	* .cvsignore: Add gnotravex.schemas.

	* gnotravex.c: Clarify the hints for the move menu.

2003-06-12  William Jon McCann  <mccann@jhu.edu>

	* gnotravex.c: Use standard function brace style so that 
	emacs will do changelogs correctly.  Tried to make spacing
	style consistent.  Changed all ints to gints.
	(get_bg_color): If we have a function to get the background 
	color it may as well return the color instead of setting a 
	g lobal variable.
	(button_press_space): Resume game if tile is clicked.

2003-06-12  Callum McKenzie  <callum@physics.otago.ac.nz>

	* gnotravex.schemas.in: 
	* Makefile.am: 
	* gnotravex.c: Add gconf support to remember the game and tile
	size. Let the window shrink from it's initial size. Also fixed
	a minor redraw bug when it failed to distinguish between game over
	and paused (paused has become the game_state variable).
	
	* Makefile.am (install-data-local): Fix unfortunate mistake with
	misplacement of high score files.

2003-06-11  William Jon McCann  <mccann@jhu.edu>

	* gnotravex.png: Removed.
	
	* Makefile.am: Removed now unused pixmap.
