@@ -1,3 +1,7 @@
+2003-06-17  William Jon McCann  <mccann@jhu.edu>
+
+	* gnotravex.c: Fixed most of the compiler warnings.
+
 2003-06-16  William Jon McCann  <mccann@jhu.edu>
 
 	* gnotravex.c (main): Look for game icon in GNOME_ICONDIR
